<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3sp"
    android:paddingRight="3sp"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="end"
        android:paddingLeft="3sp"
        android:paddingRight="3sp"
        android:text="@string/amount" />

    <TextView
        android:id="@+id/amountDislplayTextView"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/amountDisplay" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:ems="10"
        android:inputType="numberSigned|number"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/aaa"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/customPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:paddingLeft="3sp"
        android:paddingRight="3sp"
        android:text="@string/customPercent" />


    <SeekBar
        android:id="@+id/customTipSeekBar"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="start" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="end"
        android:paddingLeft="3sp"
        android:paddingRight="3sp"
        android:text="@string/tip" />

    <LinearLayout
        android:id="@+id/percentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:gravity="left"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/percent15TextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/percent15"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/percentCustomTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/percentCustom"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tipLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tip15TextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tip15"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tipCustomTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipCustom"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total15TextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total15"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/totalCustomTextView"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalCustom"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right"
        android:paddingLeft="3sp"
        android:paddingRight="3sp"
        android:text="@string/total" />

</GridLayout>